--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl_utils: ^2.8.7
   share_plus: ^10.1.2
+  change_app_package_name: ^1.4.0
 
 dev_dependencies:
   flutter_test:
